deployment/kubernetes/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: streamlit
  name: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: streamlit
    spec:
      containers:
      - image: vinycoolguy/streamlit:latest
        name: streamlit
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: streamlit
  name: streamlit
spec:
  ports:
  - port: 8501
    targetPort: 8501
  selector:
    app: streamlit
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: model
  name: model
spec:
  replicas: 2
  selector:
    matchLabels:
      app: model
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: model
    spec:
      containers:
      - image: vinycoolguy/house-price-model:latest
        name: house-price-model
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: model
  name: model
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: model
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit
                port:
                  number: 8501
